--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-handlebars": "^7.0.7",
     "mongodb": "^5.5.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
