--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
+    "@opentelemetry/instrumentation-express": "^0.32.3",
+    "@opentelemetry/instrumentation-http": "^0.40.0",
     "@opentelemetry/sdk-node": "^0.39.1",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
