--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "author": "akshay kashyap",
   "license": "ISC",
   "dependencies": {
+    "@honeycombio/opentelemetry-node": "^0.4.0",
     "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/auto-instrumentations-node": "^0.37.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.37.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
+    "@opentelemetry/instrumentation": "^0.40.0",
     "@opentelemetry/instrumentation-express": "^0.32.3",
     "@opentelemetry/instrumentation-http": "^0.40.0",
+    "@opentelemetry/resources": "^1.14.0",
     "@opentelemetry/sdk-node": "^0.39.1",
+    "@opentelemetry/sdk-trace-web": "^1.14.0",
+    "@opentelemetry/semantic-conventions": "^1.14.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
