--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
+    "oci-sdk": "^2.63.0",
     "zipkin": "^0.22.0"
   }
 }
