--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@honeycombio/opentelemetry-node": "^0.4.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.40.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
     "@opentelemetry/instrumentation": "^0.40.0",
     "@opentelemetry/instrumentation-express": "^0.32.3",
