--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@opentelemetry/semantic-conventions": "^1.14.0",
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.15",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-handlebars": "^7.0.7",
+    "log4js": "^6.9.1",
     "mongodb": "^5.5.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
