--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "oci-sdk": "^2.63.0",
+    "undici": "^5.22.1",
     "zipkin": "^0.22.0"
   }
 }
