--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r ./tracing.js server.js"
+    "start": "node -r ./tracing.js server.js && node -r ./metrics.js"
   },
   "keywords": [
     "crud",
@@ -29,16 +29,21 @@
     "axios": "^0.21.0",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.15",
+    "diskusage": "^1.1.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-handlebars": "^7.0.7",
     "log4js": "^6.9.1",
+    "metrics-os": "^1.0.1",
     "mongodb": "^5.5.0",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
+    "node-os-utils": "^1.3.7",
     "nodemon": "^2.0.6",
     "oci-sdk": "^2.63.0",
+    "os": "^0.1.2",
+    "process": "^0.11.10",
     "undici": "^5.22.1",
     "zipkin": "^0.22.0"
   }
